# http-interceptor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MANUAL.md  Makefile  README.md  flake.nix  otelcol.yaml.example
docs/: architecture.drawio
program/: Cargo.toml  build.rs
program-common/: Cargo.toml
program-ebpf/: Cargo.toml
program-ebpf/src/: lib.rs  main.rs
program/src/: main.rs
