[workspace]
resolver = "2"
members = [
    "program",
    "program-common",
    "program-ebpf",
]
default-members = ["program", "program-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
libc = { version = "0.2.159", default-features = false }
tokio = { version = "1.40.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "sync",
] }
which = { version = "6.0.0", default-features = false }
network-types = { version = "0.1.0" }
opentelemetry = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0" }
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3" }

[profile.release.package.program-ebpf]
debug = 2
codegen-units = 1
