[package]
name = "program-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
program-common = { path = "../program-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "program"
path = "src/main.rs"
